--- a/snake.html
+++ b/snake.html
@@ -2,7 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <link rel="icon" href="img/favicon.ico">
+    
     <title>Snake Game</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
     <!-- google font -->
     <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
 
