--- a/snake.html
+++ b/snake.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
 
-    <link rel="icon" href="img/favicon.ico">
-    
+    <link rel="icon" href="favicon.ico">
+
     <title>Snake Game</title>
 
     <!-- Bootstrap Core CSS -->
